spade-tests/src/snapshots/spade_tests__hir_lowering__tests__graceful_message_if_type_inference_fails_for_register.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Type of expression is not fully known
  ┌─ testinput:2:18
  │
2 │     reg(clk) x = 0;
  │                  ^ The type of this expression is not fully known
  │
  = note: Found incomplete type: int<_>


